OpenAPI contract first - under construction
