# src/main/java/cz/kromer/restshopdemo/dto/OrderProductDto.java
@@ -1,18 +1,0 @@
-package cz.kromer.restshopdemo.dto;
-
-import java.util.UUID;
-
-import jakarta.validation.constraints.NotNull;
-
-import lombok.Builder;
-import lombok.Value;
-
-@Value
-@Builder
-public class OrderProductDto {
-
-    @NotNull
-    UUID id;
-
-    String name;
-}
