# src/main/java/cz/kromer/restshopdemo/dto/error/ErrorDetailDto.java
@@ -1,17 +1,0 @@
-package cz.kromer.restshopdemo.dto.error;
-
-import lombok.Builder;
-import lombok.Value;
-
-import java.util.List;
-import java.util.UUID;
-
-@Value
-@Builder
-public class ErrorDetailDto {
-
-    UUID entityId;
-    String field;
-    String message;
-    List<ErrorDetailValueDto> values;
-}
