# src/main/java/cz/kromer/restshopdemo/dto/validation/UniqueOrderProductValidator.java
@@ -4,17 +4,17 @@ import cz.kromer.restshopdemo.dto.OrderItemDto;
 import jakarta.validation.ConstraintValidator;
 import jakarta.validation.ConstraintValidatorContext;
 
+import java.util.Collection;
 import java.util.HashSet;
-import java.util.List;
 import java.util.UUID;
 
 import static java.util.HashSet.newHashSet;
 import static org.springframework.util.CollectionUtils.isEmpty;
 
-public class UniqueOrderProductValidator implements ConstraintValidator<UniqueOrderProduct, List<OrderItemDto>> {
+public class UniqueOrderProductValidator implements ConstraintValidator<UniqueOrderProduct, Collection<OrderItemDto>> {
 
     @Override
-    public boolean isValid(List<OrderItemDto> items, ConstraintValidatorContext context) {
+    public boolean isValid(Collection<OrderItemDto> items, ConstraintValidatorContext context) {
         if (!isEmpty(items)) {
             HashSet<UUID> uuidSet = newHashSet(items.size());
             for (OrderItemDto item : items) {
